# Mul_in_ONE

./: .envrc  .envrc.example  .gitignore  GEMINI.md  PLAN.md  README.md  REFACTOR_PROGRESS.md  alembic.ini  flake.nix  index.html  logfile  package-lock.json  package.json  pyproject.toml  test_refactor.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
alembic/: env.py
assets/: MermaidService-B6BcjbW_-CpyGM-7v.js  MermaidService-B6BcjbW_-TZ7_jblr.js  index-CohapzZC.js  index-DKX9ERMk.js  index-UFI4Z01c.css
configs/: docker-compose.milvus.local.yml  milvus.yaml  rag_multi_tenant.yml
docs/: .~lock.邦多利乐队-Mio-2025年上海大学人工智能创新大赛作品研究报告.docx#  architecture.md  backend_service_design.md  database_migration.md  email_verification_and_captcha.md  frontend_api_spec.md  llm_response_speed_analysis.md  migration_to_nat_multi_tenant.md  nginx_deployment.md  persona_spec.md  rag_feature.md  report.tex  ~$利乐队-Mio-2025年上海大学人工智能创新大赛作品研究报告.docx  人工智能创新大赛-Mio-冯思源.docx  作品报告.md  对话记录.md  邦多利乐队-Mio-2025年上海大学人工智能创新大赛作品研究报告.docx
experiments/: README.md  run_all_experiments.sh  start_all.sh  stop_all.sh
personas/: .gitignore  api_configuration.yaml.example  persona.yaml.example
scripts/: bootstrap_toolkit.sh  db_control.sh  db_reset.sh  db_start.sh  db_stop.sh  migrate_milvus_collections.py  milvus_control.sh  start_backend.sh
tests/: conftest.py  test_admin_users_api.py  test_backend_service_design_doc.py  test_persona_background.py  test_rag_service.py  test_service_persona_repository.py  (+3 more)
(+119 files in other folders)
