[project]
name = "mul-in-one-nemo"
version = "0.1.0"
description = "Multi-agent social chat CLI built on NVIDIA NeMo Agent Toolkit"
authors = [{name = "Mul in One Team"}]
requires-python = ">=3.11"
dependencies = [
    "nvidia-nat>=0.6.0",
    "nvidia-nat-langchain>=1.3.0",
    "pyyaml>=6.0",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mul-in-one-nemo = "mul_in_one_nemo.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
